# youtube-canais

./: .gitignore
.cursor/: hooks.json  mcp.json
.cursor/agents/: yt-algorithm-audit.md  yt-calendar.md  yt-competitive.md  yt-metadata.md  yt-narrative.md  yt-qa.md  (+7 more)
data/: memory.db
youtube-mcp-server/: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  README.md  package.json  tsconfig.json
yt-agent/: .env.example  .gitignore  README.md  pyproject.toml
yt-agent/docs/adr/: 001-agentic-workflow-langgraph.md  002-cursor-subagents-migration.md
yt-agent/docs/roadmap/: ROADMAP.md
yt-agent/output/repackaging/: daK_7PofxMU_20260422_225240.md
yt-agent/src/yt_agent/: __init__.py  config.py  graph.py  main.py  state.py
yt-agent/src/yt_agent/agents/: __init__.py  base.py  competitive.py  metadata.py  performance.py  qa.py  repackaging.py  scriptwriter.py  validation.py
yt-agent/src/yt_agent/memory/: __init__.py  database.py  models.py  repository.py
yt-agent/src/yt_agent/output/: __init__.py  renderer.py
yt-agent/src/yt_agent/prompts/: competitive.md  metadata.md  performance.md  qa.md  repackaging.md  scriptwriter.md  validation.md
yt-agent/src/yt_agent/tools/: __init__.py  mcp_client.py  schemas.py  vidiq.py  youtube.py
yt-agent/tests/: conftest.py  test_graph.py  test_memory.py  test_renderer.py  test_state.py
yt-agent/tests/test_agents/: test_agent_calls.py  test_base.py  test_competitive.py  test_metadata.py  test_performance.py  test_qa.py  test_repackaging.py  test_retry.py  test_scriptwriter.py  test_validation.py
(+147 files in other folders)
